--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     },
     "author":"Josue Rodriguez, Fernando Mejia, Luis Matute",
     "dependencies":{
+        "inert":"3.2.0",
         "hapi":"13.0.0",
         "glue":"3.2.0",
         "joi":"8.0.2",
         "handlebars":"4.0.5",
-        "wreck":"7.0.0"
+        "wreck":"7.0.0",
+        "vision":"4.0.1"
+    },
+    "scripts": {
+        "test": "lab -L -r html -o test/coverage.html"
     }
 }
