--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-    "name":"Kraken-Webstie",
-    "version":"0.0.1",
-    "description":"test de API via website",
-    "main":"index.js",
-    "repository":{
-        "type":"git",
-        "url":"git+https://github.com/4piso/kraken-website"
-    },
-    "author":"Josue Rodriguez, Fernando Mejia, Luis Matute",
-    "dependencies":{
-        "inert":"3.2.0",
-        "hapi":"13.0.0",
-        "glue":"3.2.0",
-        "joi":"8.0.2",
-        "handlebars":"4.0.5",
-        "wreck":"7.0.0",
-        "vision":"4.0.1"
-    },
-    "scripts": {
-        "test": "lab -L -r html -o test/coverage.html"
-    }
+  "name": "Kraken-Webstie",
+  "version": "0.0.1",
+  "description": "test de API via website",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/4piso/kraken-website"
+  },
+  "author": "Josue Rodriguez, Fernando Mejia, Luis Matute",
+  "dependencies": {
+    "getconfig": "^2.2.0",
+    "glue": "3.2.0",
+    "handlebars": "4.0.5",
+    "hapi": "13.0.0",
+    "inert": "3.2.0",
+    "joi": "8.0.2",
+    "vision": "4.0.1",
+    "visionary": "4.0.0",
+    "wreck": "7.0.0"
+  },
+  "scripts": {
+    "test": "lab -L -r html -o test/coverage.html"
+  }
 }
