--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "author": "Josue Rodriguez, Fernando Mejia, Luis Matute",
   "dependencies": {
+    "bell": "7.1.0",
     "getconfig": "^2.2.0",
     "glue": "3.2.0",
     "handlebars": "4.0.5",
