--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "glue": "3.2.0",
     "handlebars": "4.0.5",
     "hapi": "13.0.0",
+    "hoek": "3.0.4",
     "inert": "3.2.0",
     "joi": "8.0.2",
     "vision": "4.0.1",
