--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "glue": "3.2.0",
     "handlebars": "4.0.5",
     "hapi": "13.0.0",
+    "hapi-auth-cookie": "^6.1.1",
     "hoek": "3.0.4",
     "inert": "3.2.0",
     "joi": "8.0.2",
     "vision": "4.0.1",
     "visionary": "4.0.0",
     "wreck": "7.0.0",
-    "yar":"7.0.0"
+    "yar": "7.0.0"
   },
   "scripts": {
     "test": "lab -L -r html -o test/coverage.html"
